# R-TuckER

./: .gitignore  LICENSE  README.md  load.py  main.py  model.py  my_main.py  pyproject.toml  requirements.txt  train.py  utils.py
configs/: base_config.py
data/dummy/: train.txt
src/data/: Data.py  Dataset.py
src/model/: R_TuckER.py
src/model/asymmetric/: R_TuckER.py  optim.py
src/model/symmetric/: R_TuckER.py  optim.py
src/utils/: layers.py  metrics.py  optim.py  regularization.py  storage.py  utils.py
src/utils/layers/: BatchNorm.py  Dropout.py
